<resources>
    <string name="app_name">Criminal Intent</string>

    <string name="hint_crime_title">Enter a title for the crime.</string>

    <string name="label_crime_title">Title</string>
    <string name="label_crime_details">Details</string>
    <string name="label_date_picker">Date of crime: </string>
    <string name="label_no_crime_in_list">No crimes yet</string>

    <string name="action_menu_new_crime">New Crime</string>
    <string name="action_menu_delete_crime">Delete Crime</string>

    <string name="subtitle_show">Show Subtitle</string>
    <string name="subtitle_hide">Hide Subtitle</string>

    <string name="button_contact_police">Police</string>
    <string name="button_first">First</string>
    <string name="button_last">Last</string>
    <string name="button_add_suspect">Choose Suspect</string>
    <string name="button_send_report">Send Crime Report</string>

    <string name="content_desc_call">Call suspect</string>
    <string name="content_desc_photo">Take a photo.</string>
    <string name="content_desc_no_photo">Crime scene photo (not set)</string>
    <string name="content_desc_have_photo">Crime scene photo (set)</string>
    <string name="content_desc_crime_summary">The crime %1$s happens on %2$s and %3$s.</string>
    <string name="content_desc_serious">Police assistant may be required.</string>
    <string name="content_desc_crime_date">Crime date. The current date is %1$s.</string>
    <string name="content_desc_crime_time">Crime time. The current time is %1$s.</string>
    <string name="content_desc_crime_suspect">Crime suspect. %1$s.</string>

    <string name="checkbox_requires_police">Requires Police</string>
    <string name="checkbox_crime_solved">Solved</string>

    <plurals name="format_subtitle">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>

    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s.</string>
    <string name="crime_report_solved">The crime has been solved</string>
    <string name="crime_report_unsolved">The crime has not been solved</string>
    <string name="crime_report_no_suspect">the crime has no suspect</string>
    <string name="crime_report_suspect">the suspect of this crime is %1$s</string>
    <string name="crime_report_subject">Criminal Intent Crime Report</string>

    <string name="implicit_send_report">Send report via</string>

    <string name="toast_no_contact">No contact applications found!</string>
    <string name="toast_permission_denied">Some features of the application will not work, please enable the permission.</string>
    <string name="toast_no_permission">Permission required!</string>

</resources>
