<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrimeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_crime_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/darker_gray"
                    android:contentDescription="@string/content_desc_no_photo"
                    android:cropToPadding="true"
                    android:focusable="true"
                    android:scaleType="centerInside" />

                <ImageButton
                    android:id="@+id/image_button_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_photo"
                    android:src="@drawable/ic_camera" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_crime_title"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/edit_text_title"
                    android:text="@string/label_crime_title" />

                <EditText
                    android:id="@+id/edit_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_crime_title"
                    android:inputType="text"
                    android:labelFor="@id/text_crime_title" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_crime_details" />

        <Button
            android:id="@+id/button_crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_crime_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkbox_crime_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_crime_solved" />

        <CheckBox
            android:id="@+id/checkbox_requires_police"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_requires_police" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_suspect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_add_suspect" />

            <ImageButton
                android:id="@+id/image_button_call"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_desc_call"
                android:src="@drawable/ic_call" />

        </LinearLayout>

        <Button
            android:id="@+id/button_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_send_report" />

    </LinearLayout>
</ScrollView>